--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
 
 
 <head>
-    <title>App Name: A Coding Project By Brian Houts</title>
+    <title>TacoCat: A Coding Project By Brian Houts</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,7 +20,7 @@
 <!--==== Nav Section ===-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/BHinitialLarge.png" class="d-inline-block align-text-top" width="30" height="24" > APP NAME</a>
+        <a class="navbar-brand" href="#"><img src="img/BHinitialLarge.png" class="d-inline-block align-text-top" width="30" height="24" > TacoCat</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page href="app.html">The App</a>
+                    <a class="nav-link active" aria-current="page" href="app.html">The App</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="code.html">The Code</a>
@@ -49,7 +49,35 @@
  <!--==== Main Section ===-->
  <main class="flex-shrink-0">
      <div class="container">
-
+        <div class="row row-cols-1 row-cols-lg-2 mt-5">
+            <div class="col">
+                <h1>TacoCat: A Coding Project</h1>
+                <h4 class="lead">TacoCat is a program to determine if the word or phrase entered is a palindrome. A palindrome is a word or phrase that reads the same backward as forward.</h4>
+                <h4>Examples of palindrome</h4>
+                <div>
+                    <p>tacocat</p>
+                    <p>racecar</p>
+                    <p>civic</p>
+                    <p>radar</p>
+                </div>
+                <h2 class="mt-5 border-bottom border-2">Instructions</h2>
+                <p>Enter a word or phrase. All white spaces and special characters will be removed.</p>
+            </div>
+            <div class="col border-start border-2">
+                <h5>Enter word or phrase</h5>
+                <!--=== Input Box ===-->
+                <input id="userPhrase" type="text" class="form-control" placeholder="Enter a phrase" aria-label="Enter a phrase">
+                <div class="mt-2 d-flex justify-content-end">
+                    <button id="btnCheck" type="button" class="btn btn-primary">Check</button>
+                </div>
+                <!--=== Alert Box ===-->
+                <div class="alert alert-success mt-5 fade show invisible" id="alert" role="alert">
+                    <h4 id="alertHeading" class="alert-heading"></h4>
+                    <hr>
+                    <p class="mb-0" id="msg"></p>
+                </div>
+            </div>
+        </div>
      </div>
 </main>
 <!--==== Footer Section ===-->
