--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="h-100">
 <head>
-    <title>App Name: A Coding Project By Brian Houts</title>
+    <title>TacoCat: A Coding Project By Brian Houts</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,7 +16,7 @@
 <!--==== Nav Section ===-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/BHinitialLarge.png" class="d-inline-block align-text-top" width="30" height="24" > APP NAME</a>
+        <a class="navbar-brand" href="#"><img src="img/BHinitialLarge.png" class="d-inline-block align-text-top" width="30" height="24" > TacoCat</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -47,9 +47,8 @@
        <div class="container col-xxl-8 px-4 py-5">
            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
             <div class="col order-last order-lg-first">
-                <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: A CODING PROJECT</h1>
-                <h4 class="lead">Living in the loop. Check out this JavaScript app designed to loop through 100 numbers and display all even #'s in <strong>Bold.</strong>
-                Give it a try just to kill some time. Why not? 🤷‍♂️</h4>
+                <h1 class="display-5 fw-bold lh-1 mb-3">TacoCat: A CODING PROJECT</h1>
+                <h4 class="lead">TacoCat is a program to determine if the word or phrase entered is a palindrome. A palindrome is a word or phrase that reads the same backward as forward.</h4>
                 <ul class="fa-ul pt-2 checklist">
                     <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
                     <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
@@ -64,7 +63,7 @@
                 </div>
             </div>
             <div class="col">
-                <img src="img/100BoldW.png" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
+                <img src="img/TacoCatClearBG.png" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
             </div>
             <h5 class="fw-bold mt-5">
                 <div class="d-flex">
